# svc

./: .gitlab-ci.yml  CMakeLists.txt  build
document/: sample.json
include/svc/: furnace.hpp  svc.hpp
source/lib/: furnace.cpp
source/lib/main/: main.cpp
source/lib/svc/: furnace.cpp  settings.hpp
unittest/: ut_furnace.cpp  ut_settings.cpp  ut_version.cpp
